[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/CardStack/CardStack.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/2D/HandStack2D/HandStack2D.gd" type="Script" id=2]

[node name="HandStack2D" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Anchor" type="Control" parent="." index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 152.0
margin_top = -84.0
margin_right = 152.0
margin_bottom = -84.0
size_flags_horizontal = 12
size_flags_vertical = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardsLayer" type="Control" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLayer" type="Control" parent="." index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
